fix: saved methods spacing

--- a/src/modal-checkout/checkout.scss
+++ b/src/modal-checkout/checkout.scss
@@ -68,6 +68,13 @@
 				margin: 0;
 			}
 		}
+		.wc-saved-payment-methods {
+			margin: 0 0 16px;
+			padding: 0 0 0 8px;
+			li input[type='radio'] {
+				margin-right: 8px;
+			}
+		}
 		.woocommerce-SavedPaymentMethods-saveNew {
 			display: flex;
 			align-items: center;
